--- a/app/views/trips/_mobility_panel.html.haml
+++ b/app/views/trips/_mobility_panel.html.haml
@@ -1,8 +1,5 @@
-:ruby
-  @ridership_mobility_mappings = @trip.ridership_mobilities.group_by{|c|[c.mobility_id, c.ridership_id]}
-
 - edit_mode = :edit if !defined? edit_mode
-.panel.panel-primary#trip_mobility_panel
+.panel.panel-primary.trip_mobility_panel#trip_mobility_panel
   .panel-heading
     %h3.panel-title
       = translate_helper(:trip_mobility_panel)
