--- a/app/views/dispatchers/_run_manifest_table.html.haml
+++ b/app/views/dispatchers/_run_manifest_table.html.haml
@@ -1,7 +1,14 @@
+:ruby
+  @capacity_types_hash = CapacityType.by_provider(current_provider).order(:name).pluck(:id,:name).to_h
+
 :css
   .new-trip-badge {
     background-color: red;
   }
+  .capacity_warning {
+    background-color: yellow;
+  }
+
 %table.table.table-striped.table-bordered.run-manifest-table{style: 'max-height: 300px; overflow-y: auto;'}
   %thead
     %tr
@@ -13,7 +20,8 @@
       %th= translate_helper(:run_manifest_table_header_address)
       %th= translate_helper(:run_manifest_table_header_scheduled_time)
       %th= translate_helper(:run_manifest_table_header_eta)
-      %th= translate_helper(:run_manifest_table_header_occupancy)
+      - @capacity_types_hash.each do |c_id, c_name|
+        %th= c_name
       %th= translate_helper(:run_manifest_table_header_fare)
       %th= translate_helper(:run_manifest_table_header_comments)
       %th= translate_helper(:run_manifest_table_header_trip_result)
@@ -25,6 +33,7 @@
       %tr
         %td{colspan: 14}= translate_helper(:empty_trips)
     - else
+      - vehicle_cannot_accommodate_warning = translate_helper(:vehicle_cannot_accommodate_warning)
       - run_id = run.id
       - itins = get_itineraries(run)
       - itins.each do |itin|
@@ -47,7 +56,8 @@
           %td= itin[:address]
           %td= format_time_for_listing(itin[:time])
           %td= itin[:eta]
-          %td= itin[:capacity]
+          - @capacity_types_hash.each do |c_id, c_name|
+            %td{class: itin[:capacity_warning] ? "capacity_warning" : "", title: itin[:capacity_warning] ? vehicle_cannot_accommodate_warning : ""}= (itin[:occupancy] && itin[:occupancy][c_id].to_i || 0)
           %td= itin[:fare]
           %td= itin[:comments]
           %td
