--- a/app/views/vehicle_capacity_configurations/_list.html.haml
+++ b/app/views/vehicle_capacity_configurations/_list.html.haml
@@ -1,7 +1,7 @@
 %ul
   - vehicle_capacity_configurations.each do |config|
     %li
-      - capacity_data = config.vehicle_capacities.where("capacity is NOT NULL and capacity > 0").default_order.joins(:capacity_type).pluck("capacity_types.name", :capacity)
+      - capacity_data = config.vehicle_capacities.has_capacity.default_order.joins(:capacity_type).pluck("capacity_types.name", :capacity)
       - capacity_data.each do |d|
         %b= "#{d[0]}: "
         = d[1]
