--- a/app/views/trips/_mobility_panel.html.haml
+++ b/app/views/trips/_mobility_panel.html.haml
@@ -8,3 +8,9 @@
       = render 'trips/ridership_mobility_listing'
     - else
       = render 'trips/ridership_mobility_edit'
+    .form-group.col-sm-12
+      %label.col-sm-3{for:"mobility_notes"}
+        = translate_helper("trip_mobility_notes")
+      .col-sm-9
+        %textarea.form-control#mobility_notes{rname:"mobility_notes", readonly:"readonly"}
+          = @customer.try :mobility_notes
