--- a/app/views/trips/_ridership_mobility_listing.html.haml
+++ b/app/views/trips/_ridership_mobility_listing.html.haml
@@ -3,14 +3,24 @@
     %tr.report-header
       %th
         = translate_helper("mobility")
-      - RidershipMobilityMapping::RIDERSHIP_LIST.each do |riderhsip_id, ridership_name|
+      - RidershipMobilityMapping::RIDERSHIP_LIST.each do |ridership_id, ridership_name|
         %th
           = ridership_name
   %tbody
+    - capacity_sum_by_ridership = {1=> 0, 2 => 0, 3 => 0, 4 => 0}
     - Mobility.by_provider(current_provider).order(:name).each do |mt|
       %tr{data: {mobility_id: mt.id}}
         %td= mt.name
-        - RidershipMobilityMapping::RIDERSHIP_LIST.each do |riderhsip_id, ridership_name|
-          - mc = @ridership_mobility_mappings[[mt.id, riderhsip_id]]
-          %td.input-column
-            = mc && mc.first.try(:capacity) || 0
+        - RidershipMobilityMapping::RIDERSHIP_LIST.each do |ridership_id, ridership_name|
+          - mc = @ridership_mobility_mappings[[mt.id, ridership_id]]
+          %td.input-column{data: {ridership_id: ridership_id}}
+            - val =  mc && mc.first.try(:capacity) || 0
+            - capacity_sum_by_ridership[ridership_id.to_i] += val
+            = val
+    %tr.total-row
+      %td.text-right= translate_helper(:total_space)
+      - RidershipMobilityMapping::RIDERSHIP_LIST.each do |ridership_id, ridership_name|
+        %td.total-column{data: {ridership_id: ridership_id}}
+          = capacity_sum_by_ridership[ridership_id.to_i]
+
+
