--- a/app/views/reports/inactive_driver_status_report/_csv.csv.haml
+++ b/app/views/reports/inactive_driver_status_report/_csv.csv.haml
@@ -1,10 +1,10 @@
 - # common
 = render 'reports/common_csv_header.csv.haml'
 
-- if @is_summary_report
-  = render "reports/#{@custom_report.name}/summary.csv.haml"
+- if @is_perm_inactive_report
+  = render "reports/#{@custom_report.name}/perm_inactive.csv.haml"
 - else
-  = render "reports/#{@custom_report.name}/detailed.csv.haml"
+  = render "reports/#{@custom_report.name}/temp_inactive.csv.haml"
   
 
   
