--- a/app/views/customers/_mobility_panel.html.haml
+++ b/app/views/customers/_mobility_panel.html.haml
@@ -11,3 +11,14 @@
       = render 'customers/ridership_mobility_listing'
     - else
       = render 'customers/ridership_mobility_edit'
+
+    .form-group.col-sm-12
+      .col-sm-3
+        = f.label :mobility_id, translate_helper(:customer_default_mobility) 
+      .col-sm-9
+        = f.collection_select :mobility_id, @mobilities, :id, :name, {include_blank: true},  {class: 'form-control'}
+    .form-group.col-sm-12
+      .col-sm-3
+        = f.label :mobility_notes, translate_helper(:mobility_notes) 
+      .col-sm-9
+        = f.text_field :mobility_notes, class: 'form-control'
