--- a/app/views/reports/manifest/_table.html.haml
+++ b/app/views/reports/manifest/_table.html.haml
@@ -1,8 +1,20 @@
 :css
+  table {
+    border: none;
+  }
+
+  table th {
+    background: white;
+    color: black;
+    border-top: 2px black solid;
+    border-bottom: 2px black solid;
+  }
+
+  tr.odd {
+    background: white;
+  }
+
   @media print {
-    table {
-      width: 100% !important;
-    }
     table td, table th{
       border: none;
     }
@@ -39,7 +51,7 @@
           - else
             %img{src: "/uta_logo.png", height:40, width:151}
           
-      %br  
+    %br  
     = render "reports/manifest/run#{@is_pdf ? '.html.haml' : ''}", run: run, is_first_run: is_first_run
 
 
