--- a/app/views/reports/manifest/_run.html.haml
+++ b/app/views/reports/manifest/_run.html.haml
@@ -1,6 +1,6 @@
 
 
-= render "reports/manifest/run_header#{@is_pdf ? '.html.haml' : ''}", run: run, is_first_run: is_first_run
+= render "reports/manifest/run_header#{@is_pdf ? '.html.haml' : ''}", run: run
 .row
   %table{style: 'font-size: 12pt; width: 100% !important;'}
     %tr
