--- a/app/views/drivers/show.html.haml
+++ b/app/views/drivers/show.html.haml
@@ -16,7 +16,7 @@
           = link_to translate_helper("reactivate"), reactivate_driver_path(@driver), method: :post, :class=>'btn action-button', :data => { :confirm => translate_helper(:reactivate_confirmation)}
         - else
           = button_tag :type => 'button', id: 'inactivateDriver', "data-target" => "#inactivateDialog", "data-toggle" => "modal", :class => "btn action-button" do
-            = @driver.inactivated? ? translate_helper(:activate) : translate_helper(:inactivate)
+            = !@driver.active_for_date?(Date.today) ? translate_helper(:activate) : translate_helper(:inactivate)
 
 = render partial: "form"
 = render 'shared/date_range_inactivate_dialog', resource: @driver, inactivation_url: inactivate_driver_path(@driver)
