--- a/app/views/shared/_date_range_inactivate_dialog.html.haml
+++ b/app/views/shared/_date_range_inactivate_dialog.html.haml
@@ -33,7 +33,7 @@
                     %span= translate_helper(:inactivated_start_date)
                   .col-sm-9
                     .input-group.datepicker-icon
-                      = f.text_field :inactivated_start_date, class: 'datepicker form-control', readonly: true, id: 'resource_inactivated_start_date'
+                      = f.text_field :inactivated_start_date, value: format_time_for_listing_day(resource.inactivated_start_date), class: 'datepicker form-control', readonly: true, id: 'resource_inactivated_start_date'
                       .input-group-btn
                         %button.btn.btn-default{:type => "button"}
                           = image_tag "calendar-clock.png"
@@ -42,7 +42,7 @@
                     %span= translate_helper(:inactivated_end_date)
                   .col-sm-9
                     .input-group.datepicker-icon
-                      = f.text_field :inactivated_end_date, class: 'datepicker form-control', readonly: true, id: 'resource_inactivated_end_date'
+                      = f.text_field :inactivated_end_date, value: format_time_for_listing_day(resource.inactivated_end_date), class: 'datepicker form-control', readonly: true, id: 'resource_inactivated_end_date'
                       .input-group-btn
                         %button.btn.btn-default{:type => "button"}
                           = image_tag "calendar-clock.png"
