Save mobility data for clone/return trip

--- a/app/views/customers/get_eligibilities_mobilities_for_trip.js.erb
+++ b/app/views/customers/get_eligibilities_mobilities_for_trip.js.erb
@@ -142,3 +142,5 @@ $('.editable-number').on('save', function(e, params) {
     }
   });
 });
+
+$('.editable-number[data-original-value!=0]').addClass('editable-unsaved');
