--- a/app/views/trips/_ridership_mobility_edit_script.html.haml
+++ b/app/views/trips/_ridership_mobility_edit_script.html.haml
@@ -132,3 +132,7 @@
       }
     });
   });
+
+  if(#{ @is_clone || @is_return || false}) {
+    $('.editable-number[data-original-value!=0]').addClass('editable-unsaved');
+  }
