Cancellations report CSV only

--- a/app/views/reports/forms/_cancellations_report.html.haml
+++ b/app/views/reports/forms/_cancellations_report.html.haml
@@ -6,4 +6,12 @@
     = f.label :customer_id, "#{translate_helper(:customer)}:"
     = f.collection_select :customer_id, @active_customers, :id, :name, {include_blank: 'All'}
 
-    = render 'reports/forms/v2_reports/common_controls', has_multiple_report_types: true, f: f
+    %label
+      = "#{translate_helper(:report_format)}:"
+      = f.select :report_format, options_for_select([['CSV', 'csv']], @query.report_format || 'csv')
+
+    %label
+      = "#{translate_helper(:report_type)}:"
+      = f.select :report_type, options_for_select([['Summary Report', 'summary'],['Detailed Report', 'detail']], @query.report_type || 'summary')
+
+    = f.submit translate_helper("run"), class: 'btn action-button'
