--- a/app/views/vehicle_capacity_configurations/_list.html.haml
+++ b/app/views/vehicle_capacity_configurations/_list.html.haml
@@ -1,7 +1,8 @@
 %ul
   - vehicle_capacity_configurations.each do |config|
-    %li
-      - capacity_data = config.vehicle_capacities.has_capacity.default_order.joins(:capacity_type).pluck("capacity_types.name", :capacity)
-      - capacity_data.each do |d|
-        %b= "#{d[0]}: "
-        = d[1]
+    - capacity_data = config.vehicle_capacities.has_capacity.default_order.joins(:capacity_type).pluck("capacity_types.name", :capacity)
+    - unless capacity_data.blank?  
+      %li
+        - capacity_data.each do |d|
+          %b= "#{d[0]}: "
+          = d[1]
