--- a/app/views/dispatchers/_runs_table.html.haml
+++ b/app/views/dispatchers/_runs_table.html.haml
@@ -30,7 +30,12 @@
                 Recur
         - vehicle_overdue_check = get_vehicle_warnings(run.vehicle, run)
         %td{class: vehicle_overdue_check[:class_name], title: vehicle_overdue_check[:tips] }
-          = link_to run.vehicle.try(:name), vehicle_path(run.vehicle), target: '_blank' if run.vehicle
+          - if run.vehicle
+            = link_to run.vehicle.try(:name), vehicle_path(run.vehicle), target: '_blank' 
+            .pull-right
+              - unless run.vehicle.vehicle_type
+                %span.label.label-warning
+                  Veh. Type?
         - driver_overdue_check = get_driver_warnings(run.driver, run)
         %td{class: driver_overdue_check[:class_name], title: driver_overdue_check[:tips] }
           = link_to run.driver.try(:user_name), driver_path(run.driver), target: '_blank' if run.driver
